@@ -31,13 +31,16 @@ import org.apache.flink.table.planner.calcite.FlinkPlannerImpl;
 import org.apache.flink.table.planner.catalog.CatalogManagerCalciteSchema;
 import org.apache.flink.table.planner.delegation.ParserImpl;
 import org.apache.flink.table.planner.delegation.PlannerContext;
+import org.apache.flink.table.resource.ResourceManager;
 import org.apache.flink.table.utils.CatalogManagerMocks;
 
 import org.apache.calcite.jdbc.CalciteSchema;
 import org.apache.calcite.plan.RelTraitDef;
 
+import java.net.URL;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.apache.calcite.jdbc.CalciteSchemaBuilder.asRootSchema;
 
@@ -58,6 +61,7 @@ public class PlannerMocks {
     private PlannerMocks(
             boolean isBatchMode,
             TableConfig tableConfig,
+            ResourceManager resourceManager,
             CatalogManager catalogManager,
             List<RelTraitDef> traitDefs,
             CalciteSchema rootSchema) {
@@ -66,7 +70,8 @@ public class PlannerMocks {
 
         final ModuleManager moduleManager = new ModuleManager();
 
-        this.functionCatalog = new FunctionCatalog(tableConfig, catalogManager, moduleManager);
+        this.functionCatalog =
+                new FunctionCatalog(tableConfig, resourceManager, catalogManager, moduleManager);
 
         this.plannerContext =
                 new PlannerContext(
@@ -80,7 +85,8 @@ public class PlannerMocks {
                                 : asRootSchema(
                                         new CatalogManagerCalciteSchema(
                                                 catalogManager, !isBatchMode)),
-                        traitDefs);
+                        traitDefs,
+                        PlannerMocks.class.getClassLoader());
 
         this.planner = plannerContext.createFlinkPlanner();
         this.parser =
@@ -94,12 +100,14 @@ public class PlannerMocks {
                 true,
                 ExpressionResolver.resolverFor(
                         tableConfig,
+                        PlannerMocks.class.getClassLoader(),
                         name -> {
                             throw new UnsupportedOperationException();
                         },
                         functionCatalog.asLookup(parser::parseIdentifier),
                         catalogManager.getDataTypeFactory(),
-                        parser::parseSqlExpression));
+                        parser::parseSqlExpression),
+                parser);
     }
 
     public FlinkPlannerImpl getPlanner() {
@@ -128,7 +136,13 @@ public class PlannerMocks {
 
     public PlannerMocks registerTemporaryTable(String tableName, Schema tableSchema) {
         final CatalogTable table =
-                CatalogTable.of(tableSchema, null, Collections.emptyList(), Collections.emptyMap());
+                CatalogTable.newBuilder()
+                        .schema(tableSchema)
+                        .options(
+                                Map.of(
+                                        "connector",
+                                        TestSimpleDynamicTableSourceFactory.IDENTIFIER()))
+                        .build();
 
         this.getCatalogManager()
                 .createTemporaryTable(
@@ -149,6 +163,11 @@ public class PlannerMocks {
         private boolean batchMode = false;
         private TableConfig tableConfig = TableConfig.getDefault();
         private CatalogManager catalogManager = CatalogManagerMocks.createEmptyCatalogManager();
+        private ResourceManager resourceManager =
+                ResourceManager.createResourceManager(
+                        new URL[0],
+                        Thread.currentThread().getContextClassLoader(),
+                        tableConfig.getConfiguration());
         private List<RelTraitDef> traitDefs = Collections.emptyList();
         private CalciteSchema rootSchema;
 
@@ -169,6 +188,11 @@ public class PlannerMocks {
             return this;
         }
 
+        public Builder withResourceManager(ResourceManager resourceManager) {
+            this.resourceManager = resourceManager;
+            return this;
+        }
+
         public Builder withCatalogManager(CatalogManager catalogManager) {
             this.catalogManager = catalogManager;
             return this;
@@ -185,7 +209,8 @@ public class PlannerMocks {
         }
 
         public PlannerMocks build() {
-            return new PlannerMocks(batchMode, tableConfig, catalogManager, traitDefs, rootSchema);
+            return new PlannerMocks(
+                    batchMode, tableConfig, resourceManager, catalogManager, traitDefs, rootSchema);
         }
     }
 
